--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Ruby Committers</h1>
-<%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
-<ul>
+<h1>Meet the Ruby Core Team</h1>
+<p class="byline">We are the tinkers behind the Ruby programming language.</p>
+
+<ul id="team">
 <%= render :partial => 'account', :collection => @accounts %>
 </ul>
