--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,29 @@
 <head>
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
 </head>
 <body>
+  <div class="ribbon">
+    <%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org', :id => 'fork-link' %>
+  </div>
 
-<%= yield %>
-
+  <div id="container">
+    <header id="site-header">
+      <h1 id="logo">Ruby Committers</h1>
+    </header>
+    <section id="content">
+      <%= yield %>
+    </section>
+    <div id="footer-padding"></div>
+  </div>
+  <footer id="site-footer">
+    &copy; <%= Time.now.strftime('%Y') %> Ruby Committers? MIT License? Who knows?
+  </footer>
+  <%= javascript_include_tag  'https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js',
+                              'https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js',
+                              'jquery.equalheights',
+                              'application' %>
 </body>
 </html>
