--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,25 +2,26 @@
 <html>
 <head>
   <title>Ruby Committers</title>
+  <link rel="shortcut icon" href="/favicon.png">
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
 </head>
 <body>
-<div id="wrap"> 
+  <div id="wrap"> 
   
-  <div id="header" class="clearfix">
-    <h2>RubyCommitters.org</h2>
-    <p>Ruby, programmer's best friend.
-  </div>
+    <div id="header" class="clearfix">
+      <h2>RubyCommitters.org</h2>
+      <p>Ruby, programmer's best friend.
+    </div>
 
-  <%= yield %>
+    <%= yield %>
   
-  <p id="footer">
-    <a href="#top">↑ BACK TO TOP</a> <br />
-    2011 - RubyCommitters.org
-  </p>
-</div>
+    <p id="footer">
+      <a href="#top">↑ BACK TO TOP</a> <br />
+      2011 - RubyCommitters.org
+    </p>
+  </div>
 </body>
 </html>
