--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
   <%= stylesheet_link_tag :all %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 </head>
 <body>
   <div class="ribbon">
@@ -14,6 +17,7 @@
   <div id="container">
     <header id="site-header">
       <h1 id="logo">Ruby Committers</h1>
+      <%= yield :title %>
     </header>
     <section id="content">
       <%= yield %>
@@ -25,6 +29,7 @@
   </footer>
   <%= javascript_include_tag  'https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js',
                               'https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js',
+        'http://cachedcommons.org/cache/jquery-colorbox/1.3.9/javascripts/jquery-colorbox-min.js',
                               'jquery.equalheights',
                               'application' %>
 </body>
