jquery Filter by username

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,7 +1,7 @@
 <% full ||= false -%>
 <article class="account">
     <%= render :partial => 'portrait', :locals => { :account => account, :full => full } %>
-    <% unless full -%><h2><%= link_to account.username, account %></h2><% end -%>
+    <% unless full -%><h2 id="username_<%= account.id %>"><%= link_to account.username, account %></h2><% end -%>
 
     <% unless account.names.empty? %>
       <p><%= render :partial => 'name', :collection => account.names %></p>
