--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,3 +1,4 @@
+<p><input id="filter_by_username" type="text" placeholder="Filter"></p>
 <section id="accounts">
   <%= render :partial => 'account', :collection => @accounts %>
 </section>
