--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,2 +1,3 @@
-<%= render :partial => 'account', :locals => { :account => @account, :full => true } %>
-<% content_for :title, "<h2 id='subtitle'>#{@account.username}</h2>".html_safe -%>
+<div id="account">
+  <%= render :partial => 'account', :locals => { :account => @account, :full => true } %>
+</div>
