don't show books in INDEX

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -20,7 +20,9 @@
       <p><strong>AKA:</strong> <%= account.nicks.collect {|n| n.value }.to_sentence %></p>
     <% end %>
 
-    <% unless account.books.empty? %>
-      <p><%= render :partial => 'book', :collection => account.books %></p>
-    <% end %>
+    <% if full -%>
+      <% unless account.books.empty? %>
+        <p><%= render :partial => 'book', :collection => account.books %></p>
+      <% end %>
+    <% end -%>
 </article>
