--- a/app/views/accounts/_book.html.erb
+++ b/app/views/accounts/_book.html.erb
@@ -1,1 +1,1 @@
-<%= link_to book.value, "http://isbndb.com/search-all.html?kw=#{book.key}" %><br>
+<li><%= link_to book.value, "http://isbndb.com/search-all.html?kw=#{book.key}" %></li>
