link_to_service doesn't pass options? for shame! also, linking up services for iconization

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -47,7 +47,7 @@
     <% if full -%>
     <footer class="my_services">
       <ul>
-        <li></li>
+        <%= render :partial => 'service', :collection => account.services %>
       </ul>
     </footer>
     <% end -%>
