--- a/app/views/accounts/_service.html.erb
+++ b/app/views/accounts/_service.html.erb
@@ -1,1 +1,1 @@
-<%= link_to_service service.name, service %><br>
+<li><%= link_to_service service.name, service, :class => service.name, :title => "#{service.name}: #{service.key}" %></li>
