--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Ruby Committers</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js', 'jquery.masonry.min' %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
 </head>
@@ -11,5 +12,11 @@
 
 <%= yield %>
 
+<script type="text/javascript" charset="utf-8">
+  $('.cards').masonry({
+/*    singleMode: true,*/
+    itemSelector: '.card'
+  });
+</script>
 </body>
 </html>
