Added icons Added my_service base css

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -33,7 +33,7 @@
       <% end -%>
     </div>
     
-    <div class="col">
+    <div class="col last">
       <% if full -%>
         <% unless account.sites.empty? %>
           <h3>Sites</h3>
