--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -175,6 +175,11 @@ p{
 
 /* ACCOUNT
 --------------------------*/
+#account{
+  width:540px;
+  margin:0 auto;
+  position:relative;
+}
 #account .account {
   background: #fff;
   padding: 20px;
@@ -183,10 +188,9 @@ p{
   -moz-border-radius: 4px;
   -moz-box-shadow: 10px 10px 5px #aba;
   -webkit-box-shadow: 0px 0px 6px #aba;
-  margin: 0 auto;
-  width: 500px;
-  min-height: 200px;
-  position: relative;
+  min-height: 240px;
+  position:relative;
+  z-index:200;
 }
 #account header {
   margin-bottom: 10px;
@@ -237,12 +241,58 @@ p{
 }
 #account .my_services {
   position: absolute;
-  right: -80px;
+  right: -60px;
   background: white;
-  padding: 20px;
+  padding: 15px;
   top: 20px;
-  z-index: -1;
+  z-index: 1;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -moz-box-shadow: 10px 10px 5px #aba;
+  -webkit-box-shadow: 0px 0px 6px #aba;
 }
 
-
+.my_services a{
+  display:block;
+  text-indent:-9999px;
+  outline:0;
+  width:32px;
+  height:32px;
+  margin:0 0 10px;
+  opacity: 0.7;
+  -moz-opacity: 0.7;
+  filter:alpha(opacity=70);
+  
+  -webkit-transition: all 0.3s ease-in-out;
+ 	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-webkit-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+.my_services a:hover{
+  opacity: 1.0;
+  -moz-opacity: 1.0;
+  filter:alpha(opacity=100);
+}
+.my_services li:last-child a{
+  margin:0;
+}
+a.twitter{
+  background:url(/images/twitter_32.png) no-repeat 0 0;
+}
+a.facebook{
+  background:url(/images/facebook_32.png) no-repeat 0 0;
+}
+a.github{
+  background:url(/images/git_32.png) no-repeat 0 0;
+}
+a.mixi{
+  background:url(/images/mixi.png) no-repeat 0 0;
+}
+a.iddy{
+  
+}
+a.friendfeed{
+  background:url(/images/friendfeed_32.png) no-repeat 0 0;
+}
 
