--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -25,7 +25,7 @@
     <div class="col">
       <% if full -%>
         <% unless account.books.empty? %>
-          <h3>Books</h3>
+          <h3 id="title-books">Books</h3>
           <ul>
             <%= render :partial => 'book', :collection => account.books %>
           </ul>
@@ -36,7 +36,7 @@
     <div class="col last">
       <% if full -%>
         <% unless account.sites.empty? %>
-          <h3>Sites</h3>
+          <h3 id="title-sites">Sites</h3>
           <ul>
             <%= render :partial => 'site', :collection => account.sites %>
           </ul>
