--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,6 +2,7 @@
 html
   head
     title= RubyCommitters.site_name
+    link rel="canonical" href="http://rubycommitters.org/"
     == stylesheet_link_tag :base
     == javascript_include_tag :jquery, :application
 
